No idea what these changes are
(it's been too long)

but it runs. Before I make new changes, let's get a commit point.

--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,12 @@ name = "pypi"
 lomond = "*"
 zeroconf = "*"
 smbus-cffi = "*"
-neopixel = "*"
+adafruit-circuitpython-neopixel = "*"
 osc4py3 = "*"
 pyyaml = "*"
+scapy = "*"
+netifaces = "*"
+netaddr = "*"
 
 [dev-packages]
 
